= Changelog:

==== https://github.com/h3rucutu/caltic-vertx-starter/tree/0.0.6[Version 0.0.6] (2019-06-20)

- Upgrade Vert.x version to 3.7.1

==== https://github.com/h3rucutu/caltic-vertx-starter/tree/0.0.5[Version 0.0.5] (2019-05-16)

- Upgrade Vert.x version to 3.7.0
- Upgrade vertx-maven-plugin version to 1.0.18

==== https://github.com/h3rucutu/caltic-vertx-starter/tree/0.0.4[Version 0.0.4] (2018-12-27)

- Upgrade Vert.x version to 3.6.2

==== https://github.com/h3rucutu/caltic-vertx-starter/tree/0.0.3[Version 0.0.3] (2018-12-18)

- Upgrade Vert.x version to 3.5.4
- Upgrade Maven Wrapper version to 0.4.2
- Fix wrong groupId package

==== https://github.com/h3rucutu/caltic-vertx-starter/tree/0.0.2[Version 0.0.2] (2018-10-06)

- Integration with Travis-CI

==== https://github.com/h3rucutu/caltic-vertx-starter/tree/0.0.1[Version 0.0.1] (2018-10-06)

- Added Apache-2.0 License and Changelog
- Initial commit